Add collapse + Maryam review

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -23,11 +23,11 @@ Here is the exhaustive list of integrations  **not immediately compatible** with
 
 ## Improve language support
 
-* Add the Korean language support 🇰🇷
-* Improve the Chinese language support:
+* Add support for Korean 🇰🇷
+* Improve support for Chinese:
   * Normalize Chinese characters into Pinyin
   * Disable the HMM (Hidden Markov Model algorithm) feature in Chinese segmentation
-* Improve the Thai language support
+* Improve Thai language support
 
 Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#736 and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
 
@@ -78,82 +78,133 @@ Done in meilisearch/milli#752 and #3269 by @dureuill
 
 ## Error handler changes
 
-When Meilisearch returns an error, a `code` field is returned in the JSON object. Multiples of these unclear and vague `code`s have been changed to improve the user experience.
+All detailed task responses contain `error` field. When a task fails, it is always accompanied by a JSON-formatted error response that contains an error `code` and `type`. Many of these `code`s and `type`s were unclear and have been changed to improve the user experience.
 
-We consider this as a breaking change since, as a developer, it can lead to break your code if you catch one of the following `code`s in your code base:
-* When calling `POST /indexes/swap-indexes`
-  - `duplicate_index_found` is renamed into `invalid_swap_duplicate_index_found`
-  - Sending an array of indexes not containing exactly 2 `indexUids` for a swap operation object now returns `invalid_swap_indexes` instead of a `bad_request`
-* When calling `GET /indexes` and `GET /indexes/:uid`
-  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_index_limit` instead of `bad_request`
-  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_index_offset` instead of `bad_request`
-* When calling `POST /indexes` and `PUT /indexes/:uid`
-  - When `uid` is missing in the payload, Meilisearch returns `missing_index_uid` instead of `bad_request`
-  - Sending a value with a different type than `string` or `null` for `primaryKey` now returns `invalid_index_primary_key` instead of `bad_request`
-* When calling `GET /index/:uid/documents` and `GET /indexes/:uid/documents/:uid`
-  - Using the `fields` parameter wrongly, Meilisearch now returns `invalid_document_fields` instead of `bad_request`
-  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_document_limit` instead of `bad_request`
-  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_document_offset` instead of `bad_request`
+This is a breaking change if you use any of the following `code`s or `type`s in your code base:
+
+* When calling `POST /indexes/swap-indexes`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li><code>duplicate_index_found</code> is renamed to <code>invalid_swap_duplicate_index_found</code></li>
+        <li>Sending an array of indexes not containing exactly 2 `indexUids` for a swap operation object now returns <code>invalid_swap_indexes</code> instead of a <code>bad_request</code></li>
+      </ul>
+  </details>
+* When calling `GET /indexes` and `GET /indexes/:uid`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_index_limit</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_index_offset</code> instead of <code>bad_request</code></li>
+    </ul>
+  </details>
+* When calling `POST /indexes` and `PUT /indexes/:uid`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>A missing <code>uid</code> in the payload will return <code>missing_index_uid</code> instead of <code>bad_request</code></li>
+        <li>Sending a value with a other type than <code>string</code> or <code>null</code> for <code>primaryKey</code> now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
+      </ul>
+  </details>
+* When calling `GET /index/:uid/documents` and `GET /indexes/:uid/documents/:uid`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>Incorrect use of the <code>fields</code> parameter now returns <code>invalid_document_fields</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_document_limit</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_document_offset</code> instead of <code>bad_request</code></li>
+      </ul>
+  </details>
 * When calling `POST /index/:uid/documents` and `PUT /indexes/:uid/documents`
-  - Using the `primaryKey` parameter wrongly, Meilisearch now returns ` invalid_index_primary_key` instead of `bad_request`
-  - When adding a document with a wrongly formatted `_geo` field, Meilisearch now returns `invalid_document_geo_field` instead of `invalid_geo_field`[RENAME]
-* When calling `GET /index/:uid/search` and `POST /indexes/:uid/search`
-  - Using the `q` parameter wrongly, Meilisearch now returns `invalid_search_q` instead of `bad_request`
-  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_search_offset` instead of `bad_request`
-  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_search_limit` instead of `bad_request`
-  - Using the `page` parameter wrongly, Meilisearch now returns `invalid_search_page` instead of `bad_request`
-  - Using the `hits_per_page` parameter wrongly, Meilisearch now returns `invalid_search_hits_per_page` instead of `bad_request`
-  - Using the `attributesToRetrieve` parameter wrongly, Meilisearch now returns `invalid_search_attributes_to_retrieve` instead of `bad_request`
-  - Using the `attributesToCrop` parameter wrongly, Meilisearch now returns `invalid_search_attributes_to_crop` instead of `bad_request`
-  - Using the `showMatchesPosition` parameter wrongly, Meilisearch now returns `invalid_search_show_matches_position` instead of `bad_request`
-  - Using the `filter` parameter wrongly, Meilisearch now returns `invalid_search_filter` instead of `bad_request`
-  - Using the `sort` parameter wrongly, Meilisearch now returns `invalid_search_sort` instead of `bad_request`
-  - Using the `facets` parameter wrongly, Meilisearch now returns `invalid_search_facets` instead of `bad_request`
-  - Using the `highlightPreTag` parameter wrongly, Meilisearch now returns `invalid_search_highlight_pre_tag` instead of `bad_request`
-  - Using the `highlightPostTag` parameter wrongly, Meilisearch now returns `invalid_search_highlight_post_tag` instead of `bad_request`
-  - Using the `matchingStrategy` parameter wrongly, Meilisearch now returns `invalid_search_matching_strategy` instead of `bad_request`
-* When calling any `/settings` routes and their sub-routes
-  - Defining the `displayedAttributes` setting wrongly, Meilisearch now returns `invalid_settings_displayed_attributes` instead of `bad_request`
-  - Defining the `searchableAttributes` setting wrongly, Meilisearch now returns `invalid_settings_searchable_attributes` instead of `bad_request`
-  - Defining the `filterableAttributes` setting wrongly, Meilisearch now returns `invalid_settings_filterable_attributes` instead of `bad_request`
-  - Defining the `sortableAttributes` setting wrongly, Meilisearch now returns `invalid_settings_sortable_attributes` instead of `bad_request`
-  - Defining the `rankingRules` setting wrongly, Meilisearch now returns `invalid_settings_ranking_rules` instead of `bad_request`
-  - Defining the `stopWords` setting wrongly, Meilisearch now returns `invalid_settings_stop_words` instead of `bad_request`
-  - Defining the `synonyms` setting wrongly, Meilisearch now returns `invalid_settings_synonyms` instead of `bad_request`
-  - Defining the `distinctAttribute` setting wrongly, Meilisearch now returns `invalid_settings_distinct_attribute` instead of `bad_request`
-  - Defining the `typoTolerance` setting wrongly, Meilisearch now returns `invalid_settings_typo_tolerance` instead of `bad_request`
-  - `invalid_typo_tolerance_min_word_size_for_typos` is not returned anymore and `invalid_settings_typo_tolerance` is returned instead
-  - Defining the `faceting` setting wrongly, Meilisearch now returns `invalid_settings_faceting` instead of `bad_request`
-  - Defining the `pagination` setting wrongly, Meilisearch now returns `invalid_settings_pagination` instead of `bad_request`
-* When calling any `/tasks` routes
-  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_search_offset` instead of `bad_request`
-  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_search_limit` instead of `bad_request`
-  - Using the `uids` parameter wrongly, Meilisearch now returns `invalid_task_uids` instead of `invalid_task_uids_filter`
-  - Using the `types` parameter wrongly, Meilisearch now returns `invalid_task_types` instead of `invalid_task_types_filter`
-  - Using the `statuses` parameter wrongly, Meilisearch now returns `invalid_task_statuses` instead of `invalid_task_statuses_filter`
-  - Using the `cancelBy` parameter wrongly, Meilisearch now returns `invalid_task_cancel_by` instead of `invalid_task_canceled_by_filter`
-  - Using the `beforeEnqueuedAt` parameter wrongly, Meilisearch now returns `invalid_task_before_enqueued_at` instead of `invalid_task_date_filter`
-  - Using the `afterEnqueuedAt` parameter wrongly, Meilisearch now returns `invalid_task_after_enqueued_at` instead of `invalid_task_date_filter`
-  - Using the `beforeStartedAt` parameter wrongly, Meilisearch now returns `invalid_task_before_started_at` instead of `invalid_task_date_filter`
-  - Using the `afterStartedAt` parameter wrongly, Meilisearch now returns `invalid_task_after_started_at` instead of `invalid_task_date_filter`
-  - Using the `beforeFinishedAt` parameter wrongly, Meilisearch now returns `invalid_task_before_finished_at` instead of `invalid_task_date_filter`
-  - Using the `afterFinishedAt` parameter wrongly, Meilisearch now returns `invalid_task_after_finished_at` instead of `invalid_task_date_filter`
-* When calling `GET /keys` and `GET /keys/:uid`
-  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_api_key_limit` instead of `bad_request`
-  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_api_key_offset` instead of `bad_request`
-* When calling `POST /keys`
-  - If the `actions` field is missing, Meilisearch now returns `missing_api_key_actions` instead of `missing_parameter`
-  - If the `indexes` field is missing, Meilisearch now returns `missing_api_key_indexes` instead of `missing_parameter`
-  - If the `expireAt` field is missing, Meilisearch now returns `missing_api_key_expire_at` instead of `missing_parameter`
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>Incorrect use of the <code>primaryKey</code> parameter now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
+        <li><code>invalid_document_geo_field</code> has been renamed to <code>invalid_geo_field</code></li>
+      </ul>
+  </details>
+* When calling `GET /index/:uid/search` and `POST /indexes/:uid/search`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>Incorrect use of the <code>q</code> parameter now returns <code>invalid_search_q</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_search_offset</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_search_limit</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>page</code> parameter now returns <code>invalid_search_page</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>hits_per_page</code> parameter now returns <code>invalid_search_hits_per_page</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>attributesToRetrieve</code> parameter now returns <code>invalid_search_attributes_to_retrieve</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>attributesToCrop</code> parameter now returns <code>invalid_search_attributes_to_crop</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>showMatchesPosition</code> parameter now returns <code>invalid_search_show_matches_position</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>filter</code> parameter now returns <code>invalid_search_filter</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>sort</code> parameter now returns <code>invalid_search_sort</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>facets</code> parameter now returns <code>invalid_search_facets</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>highlightPreTag</code> parameter now returns <code>invalid_search_highlight_pre_tag</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>highlightPostTag</code> parameter now returns <code>invalid_search_highlight_post_tag</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>matchingStrategy</code> parameter now returns <code>invalid_search_matching_strategy</code> instead of <code>bad_request</code></li>
+    </ul>
+  </details>
+* When calling any `/settings` routes and their sub-routes, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>Incorrect use of the <code>displayedAttributes</code> setting now returns <code>invalid_settings_displayed_attributes</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>searchableAttributes</code> setting now returns <code>invalid_settings_searchable_attributes</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>filterableAttributes</code> setting now returns <code>invalid_settings_filterable_attributes</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>sortableAttributes</code> setting now returns <code>invalid_settings_sortable_attributes</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>rankingRules</code> setting now returns <code>invalid_settings_ranking_rules</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>stopWords</code> setting now returns <code>invalid_settings_stop_words</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>synonyms</code> setting now returns <code>invalid_settings_synonyms</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>distinctAttribute</code> setting now returns <code>invalid_settings_distinct_attribute</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>typoTolerance</code> setting now returns <code>invalid_settings_typo_tolerance</code> instead of <code>bad_request</code></li>
+        <li><code>invalid_typo_tolerance_min_word_size_for_typos</code> is not returned anymore and <code>invalid_settings_typo_tolerance</code> is returned instead</li>
+        <li>Incorrect use of the <code>faceting</code> setting now returns <code>invalid_settings_faceting</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>pagination</code> setting now returns <code>invalid_settings_pagination</code> instead of <code>bad_request</code></li>
+    </ul>
+  </details>
+* When calling any `/tasks` routes, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_search_offset</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_search_limit</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>uids</code> parameter now returns <code>invalid_task_uids</code> instead of <code>invalid_task_uids_filter</code></li>
+        <li>Incorrect use of the <code>types</code> parameter now returns <code>invalid_task_types</code> instead of <code>invalid_task_types_filter</code></li>
+        <li>Incorrect use of the <code>statuses</code> parameter now returns <code>invalid_task_statuses</code> instead of <code>invalid_task_statuses_filter</code></li>
+        <li>Incorrect use of the <code>cancelBy</code> parameter now returns <code>invalid_task_cancel_by</code> instead of <code>invalid_task_canceled_by_filter</code></li>
+        <li>Incorrect use of the <code>beforeEnqueuedAt</code> parameter now returns <code>invalid_task_before_enqueued_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Incorrect use of the <code>afterEnqueuedAt</code> parameter now returns <code>invalid_task_after_enqueued_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Incorrect use of the <code>beforeStartedAt</code> parameter now returns <code>invalid_task_before_started_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Incorrect use of the <code>afterStartedAt</code> parameter now returns <code>invalid_task_after_started_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Incorrect use of the <code>beforeFinishedAt</code> parameter now returns <code>invalid_task_before_finished_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Incorrect use of the <code>afterFinishedAt</code> parameter now returns <code>invalid_task_after_finished_at</code> instead of <code>invalid_task_date_filter</code></li>
+    </ul>
+  </details>
+* When calling `GET /keys` and `GET /keys/:uid`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_api_key_limit</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_api_key_offset</code> instead of <code>bad_request</code></li>
+      </ul>
+  </details>
+* When calling `POST /keys`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>If the <code>actions</code> field is missing, Meilisearch now returns <code>missing_api_key_actions</code instead of <code>missing_parameter</code</li>
+        <li>If the <code>indexes</code> field is missing, Meilisearch now returns <code>missing_api_key_indexes</code instead of <code>missing_parameter</code</li>
+        <li>If the <code>expiresAt</code> field is missing, Meilisearch now returns <code>missing_api_key_expire_at</code instead of <code>missing_parameter</code></li>
+      </ul>
+  </details>
 * When Meilisearch does not have enough space
-  - the `no_space_left_on_device` code is returned instead of `internal`
-  - the `system` type is returned instead of `internal`
-* When Meilisearch throw an I/O error
-  - the `io_error` code is returned instead of `internal`
-  - the `system` type is returned instead of `internal`
-* When your machines reaches the maximum number of files allowed to be opened
-  - the `too_many_open_files` code is returned instead of `internal`
-  - the `system` code is returned instead of `internal`
+  - the `no_space_left_on_device` code replaces `internal`
+  - `system` type replaces `internal`
+* When Meilisearch throws an I/O error
+  - the `io_error` code replaces `internal`
+  - `system` type replaces `internal`
+* When your machines exceeds the maximum number allowed for open files, Meilisearch returns
+  - `too_many_open_files` instead of `internal` as a `code`
+  - `system` instead of `internal` as a `type`
 
 Done by @irevoire in #3316 and #3263
 
