Add new link regarding size options

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -54,7 +54,7 @@ Since we are releasing v1.0.0, this is the last time we introduce breaking chang
 * As a security measure, Meilisearch will now reject master keys that are less than 16 bytes in [production environment](https://docs.meilisearch.com/learn/configuration/instance_options.html#environment) (#3274 and #3295) @dureuill
 * Remove `--max-index-size` and `--max-task-db` configuration options (#3278) @dureuill
 These options were not serving their intended purpose of limiting the disk space taken by Meilisearch for the reasons laid out [here](https://github.com/meilisearch/product/discussions/567#discussioncomment-4322126).
-Please [reach out](https://github.com/meilisearch/meilisearch/discussions/3280) if the [new limits](add link) impede your usage.
+Please [reach out](https://github.com/meilisearch/product/discussions/567#discussioncomment-4634432) if the new limits (described in the previous link) impede your usage.
 * Remove `--disable-auto-batching` CLI option and the associated environment variable `MEILI_DISABLE_AUTO_BATCHING` (#3296) @loiclec
 This option was initially introduced as a workaround in case of a bug and is no longer useful since the feature has matured.
 * Rename dump command from `--dumps-dir` to `--dump-dir` (#3175) @dureuill
