--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -27,6 +27,7 @@ Here is the exhaustive list of integrations  **not immediately compatible** with
 * Improve support for Chinese:
   * Normalize Chinese characters into Pinyin
   * Disable the HMM (Hidden Markov Model algorithm) feature in Chinese segmentation
+  * Unify Chinese characters variants (kvariants, zvariants, semantic variants..)
 * Enhance Hebrew, Thai, Arabic, and Latin Languages support by improving Diacritics and nonspacing marks normalization
 
 Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#736 and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
