--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -192,9 +192,9 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>If the <code>actions</code> field is missing, Meilisearch now returns <code>missing_api_key_actions</code instead of <code>missing_parameter</code</li>
-        <li>If the <code>indexes</code> field is missing, Meilisearch now returns <code>missing_api_key_indexes</code instead of <code>missing_parameter</code</li>
-        <li>If the <code>expiresAt</code> field is missing, Meilisearch now returns <code>missing_api_key_expire_at</code instead of <code>missing_parameter</code></li>
+        <li>If the <code>actions</code> field is missing, Meilisearch now returns <code>missing_api_key_actions</code> instead of <code>missing_parameter</code></li>
+        <li>If the <code>indexes</code> field is missing, Meilisearch now returns <code>missing_api_key_indexes</code> instead of <code>missing_parameter</code></li>
+        <li>If the <code>expiresAt</code> field is missing, Meilisearch now returns <code>missing_api_key_expire_at</code> instead of <code>missing_parameter</code></li>
       </ul>
   </details>
 * When Meilisearch does not have enough space
