--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -136,8 +136,8 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Incorrect use of the <code>attributesToRetrieve</code> parameter now returns <code>invalid_search_attributes_to_retrieve</code> instead of <code>bad_request</code></li>
         <li>Incorrect use of the <code>attributesToCrop</code> parameter now returns <code>invalid_search_attributes_to_crop</code> instead of <code>bad_request</code></li>
         <li>Incorrect use of the <code>showMatchesPosition</code> parameter now returns <code>invalid_search_show_matches_position</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>filter</code> parameter now returns <code>invalid_search_filter</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>sort</code> parameter now returns <code>invalid_search_sort</code> instead of <code>bad_request</code></li>
+        <li>Incorrect use of the <code>filter</code> parameter now returns <code>invalid_search_filter</code> instead of <code>invalid_filter</code></li>
+        <li>Incorrect use of the <code>sort</code> parameter now returns <code>invalid_search_sort</code> instead of <code>invalid_sort</code></li>
         <li>Incorrect use of the <code>facets</code> parameter now returns <code>invalid_search_facets</code> instead of <code>bad_request</code></li>
         <li>Incorrect use of the <code>highlightPreTag</code> parameter now returns <code>invalid_search_highlight_pre_tag</code> instead of <code>bad_request</code></li>
         <li>Incorrect use of the <code>highlightPostTag</code> parameter now returns <code>invalid_search_highlight_post_tag</code> instead of <code>bad_request</code></li>
