Update changelogs after rc1

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -89,6 +89,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
       <ul>
         <li><code>duplicate_index_found</code> is renamed to <code>invalid_swap_duplicate_index_found</code></li>
         <li>Sending an array of indexes not containing exactly 2 `indexUids` for a swap operation object now returns <code>invalid_swap_indexes</code> instead of a <code>bad_request</code></li>
+        <li>If the <code>indexes</code> field is missing, Meilisearch now returns <code>missing_swap_indexes</code> instead of <code>missing_parameter</code></li>
       </ul>
   </details>
 * When calling `GET /indexes` and `GET /indexes/:uid`, some error `code`s have been changed.
@@ -197,6 +198,18 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>If the <code>expiresAt</code> field is missing, Meilisearch now returns <code>missing_api_key_expire_at</code> instead of <code>missing_parameter</code></li>
       </ul>
   </details>
+* When calling `PUT /keys`, some error `code`s have been changed.
+  <details>
+    <summary>Click for details</summary>
+      <ul>
+        <li>If trying to update the <code>uid</code> field, Meilisearch now returns <code>immutable_api_key_uid</code> instead of <code>immutable_field</code></li>
+        <li>If trying to update the <code>actions</code> field, Meilisearch now returns <code>immutable_api_key_actions</code> instead of <code>immutable_field</code></li>
+        <li>If trying to update the <code>indexes</code> field, Meilisearch now returns <code>immutable_api_key_indexes</code> instead of <code>immutable_field</code></li>
+        <li>If trying to update the <code>expiresAt</code> field, Meilisearch now returns <code>immutable_api_key_expires_at</code> instead of <code>immutable_field</code></li>
+        <li>If trying to update the <code>createdAt</code> field, Meilisearch now returns <code>immutable_api_key_created_at</code> instead of <code>immutable_field</code></li>
+        <li>If trying to update the <code>updatedAt</code> field, Meilisearch now returns <code>immutable_api_key_updated_at</code> instead of <code>immutable_field</code></li>
+      </ul>
+  </details>
 * When Meilisearch does not have enough space
   - the `no_space_left_on_device` code replaces `internal`
   - `system` type replaces `internal`
@@ -206,8 +219,13 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
 * When your machines exceeds the maximum number allowed for open files, Meilisearch returns
   - `too_many_open_files` instead of `internal` as a `code`
   - `system` instead of `internal` as a `type`
+* Any Meilisearch errors with `system` type returns HTTP error code `500` (#3321) @irevoire
+* Some errors are now returned synchronously
+  - `invalid_index_uid`
+  - `invalid_settings_ranking_rules`
+  - `invalid_settings_typo_tolerance` if `oneTypo` and `twoTypos` are filled (for `minWordSizeForTypos`) but are invalid
 
-Done by @irevoire in #3316 and #3263
+Done by @irevoire and @loiclec in #3316, #3263, #3329, #3334 and #3339
 
 # Fixes 🐞
 
@@ -216,6 +234,8 @@ Done by @irevoire in #3316 and #3263
 * Re-introduce the `no_space_left_on_device` error (#3263) @irevoire
 * Index creation and update dates are now kept when using a dump (#3245) @amab8901
 * Fix documentation link when returning errors (#3288) @loiclec
+* When using `/tasks routes`, fix the usage of `*`. More information in this issue about the bug (#3339) @loiclec
+* Fix the cancelling task behavior when sending an invalid `canceledBy` (#3375) @Kerollmops
 
 # Misc
 
@@ -240,7 +260,7 @@ The following changes do not impact user experience.
   * Fix update-cargo-toml-version.yml (#3224) @mohitsaxenaknoldus
   * Update CI dependencies (#3179, #3181 and #3180)
   * Update some `cargo_toml` dependency (#3128) @colbsmcdolbs
-  * Update mini-dashboard to v0.2.4 (#3186) @mdubus
+  * Update mini-dashboard to v0.2.4 (#3186, and #3322) @mdubus
 * Documentation
   * Update README to reference Meilisearch Cloud (#3221) @davelarkan
   * Replace Slack by Discord in README.md (#3234 and #3276) @tpayet @shivaylamba
