--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -79,7 +79,7 @@ Done in meilisearch/milli#752 and #3269 by @dureuill
 
 ## Error handler changes
 
-All detailed task responses contain `error` field. When a task fails, it is always accompanied by a JSON-formatted error response that contains an error `code` and `type`. Many of these `code`s and `type`s were unclear and have been changed to improve the user experience.
+All detailed task responses contain the `error` field. When a task fails, it is always accompanied by a JSON-formatted error response that contains an error `code` and `type`. Many of these `code`s and `type`s were unclear and have been changed to improve the user experience.
 
 This is a breaking change if you use any of the following `code`s or `type`s in your code base:
 
