--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -28,7 +28,7 @@ Here is the exhaustive list of integrations  **not immediately compatible** with
   * Normalize Chinese characters into Pinyin
   * Disable the HMM (Hidden Markov Model algorithm) feature in Chinese segmentation
   * Unify Chinese characters variants (kvariants, zvariants, semantic variants, etc)
-* Enhance Hebrew, Thai, Arabic, and Latin Languages support by improving Diacritics and nonspacing marks normalization
+* Enhance Hebrew, Thai, Arabic, and Latin languages support by improving diacritics and non-spacing marks normalization
 
 Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#736 and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
 
