--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -88,7 +88,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
     <summary>Click for details</summary>
       <ul>
         <li><code>duplicate_index_found</code> is renamed to <code>invalid_swap_duplicate_index_found</code></li>
-        <li>Sending an array of indexes not containing exactly 2 `indexUids` for a swap operation object now returns <code>invalid_swap_indexes</code> instead of a <code>bad_request</code></li>
+        <li>Sending an array of indexes not containing exactly 2 <code>indexUids</code> for a swap operation object now returns <code>invalid_swap_indexes</code> instead of a <code>bad_request</code></li>
         <li>If the <code>indexes</code> field is missing, Meilisearch now returns <code>missing_swap_indexes</code> instead of <code>missing_parameter</code></li>
       </ul>
   </details>
