--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -198,7 +198,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>If the <code>expiresAt</code> field is missing, Meilisearch now returns <code>missing_api_key_expire_at</code> instead of <code>missing_parameter</code></li>
       </ul>
   </details>
-* When calling `PATCH /keys`, some error `code`s have been changed.
+* When calling `PATCH /keys`, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
