--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -96,7 +96,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_index_limit</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>limit</code> parameter now returns <code>invalid_index_limit</code> instead of <code>bad_request</code></li>
         <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_index_offset</code> instead of <code>bad_request</code></li>
     </ul>
   </details>
