--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -145,7 +145,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Incorrect use of the <code>matchingStrategy</code> parameter now returns <code>invalid_search_matching_strategy</code> instead of <code>bad_request</code></li>
     </ul>
   </details>
-* When calling any `/settings` routes and their sub-routes, some error `code`s have been changed.
+* When calling any `/settings` routes and their sub-routes, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
