--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -163,7 +163,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Incorrect use of the <code>pagination</code> setting now returns <code>invalid_settings_pagination</code> instead of <code>bad_request</code></li>
     </ul>
   </details>
-* When calling any `/tasks` routes, some error `code`s have been changed.
+* When calling any `/tasks` routes, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
