--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -181,7 +181,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Incorrect use of the <code>afterFinishedAt</code> parameter now returns <code>invalid_task_after_finished_at</code> instead of <code>invalid_task_date_filter</code></li>
     </ul>
   </details>
-* When calling `GET /keys` and `GET /keys/:uid`, some error `code`s have been changed.
+* When calling `GET /keys` and `GET /keys/:uid`, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
