--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -189,7 +189,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_api_key_offset</code> instead of <code>bad_request</code></li>
       </ul>
   </details>
-* When calling `POST /keys`, some error `code`s have been changed.
+* When calling `POST /keys`, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
